client-app/with-cpq/objects/SBQQ__Quote__c/fields/FLD_Bill_To_Number__c.field-meta.xml
<CustomField>
    <fullName>FLD_Bill_To_Number__c</fullName>
    <label>FLD Bill To Number</label>
    <description>Bill To Number Field</description>
    <length>10</length>
    <type>Text</type>
</CustomField>