client-app/with-cpq/objects/SBQQ__Quote__c/fields/FLD_Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>FLD_Distribution_Channel__c</fullName>
    <label>Distribution Channel</label>
    <description>Distribution Channel</description>
    <length>2</length>
    <type>Text</type>
</CustomField>