client-app/with-cpq/objects/SBQQ__Quote__c/fields/FLD_Division__c.field-meta.xml
<CustomField>
    <fullName>FLD_Division__c</fullName>
    <label>Division</label>
    <description>Division</description>
    <length>2</length>
    <type>Text</type>
</CustomField>