client-app/with-cpq/objects/SBQQ__Quote__c/fields/FLD_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>FLD_Document_Type__c</fullName>
    <label>Document Type</label>
    <description>Document Type</description>
    <length>4</length>
    <type>Text</type>
</CustomField>