client-app/with-cpq/objects/SBQQ__Quote__c/fields/FLD_Payer_Number__c.field-meta.xml
<CustomField>
    <fullName>FLD_Payer_Number__c</fullName>
    <label>FLD Payer To Number</label>
    <description>Payer To Number Field</description>
    <length>10</length>
    <type>Text</type>
</CustomField>