client-app/with-cpq/objects/SBQQ__Quote__c/fields/FLD_Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>FLD_Sales_Organization__c</fullName>
    <label>Sales Organization</label>
    <description>Sales Organization</description>
    <length>4</length>
    <type>Text</type>
</CustomField>