client-app/with-cpq/objects/SBQQ__Quote__c/fields/FLD_SalesDocStatus__c.field-meta.xml
<CustomField>
    <fullName>FLD_SalesDocStatus__c</fullName>
        <label>FLD Sales Doc Status</label>
        <description>SObject status for Sales Doc</description>
        <formula>"Create"</formula>
        <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
        <type>Text</type>
</CustomField>