client-app/with-cpq/objects/SBQQ__Quote__c/fields/FLD_SAP_Inquiry_Number__c.field-meta.xml
<CustomField>
    <fullName>FLD_SAP_Inquiry_Number__c</fullName>
    <label>SAP Inquiry Number</label>
    <description>SAP Inquiry Number</description>
    <length>10</length>
    <type>Text</type>
</CustomField>