client-app/with-cpq/objects/SBQQ__Quote__c/fields/FLD_SAP_Simulation_Error__c.field-meta.xml
<CustomField>
    <fullName>FLD_SAP_Simulation_Error__c</fullName>
    <label>SAP Simulation Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>