client-app/with-cpq/objects/SBQQ__Quote__c/fields/FLD_Ship_To_Number__c.field-meta.xml
<CustomField>
    <fullName>FLD_Ship_To_Number__c</fullName>
    <label>FLD Ship To Number</label>
    <description>Ship To Number Field</description>
    <length>10</length>
    <type>Text</type>
</CustomField>