client-app/with-cpq/objects/SBQQ__Quote__c/fields/FLD_Sold_To_Number__c.field-meta.xml
<CustomField>
    <fullName>FLD_Sold_To_Number__c</fullName>
    <label>FLD Sold To Number</label>
    <description>Sold To Number</description>
    <formula>SBQQ__Account__r.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>