client-app/with-cpq/objects/SBQQ__Quote__c/fields/SAP_Configuration__c.field-meta.xml
<CustomField>
    <fullName>SAP_Configuration__c</fullName>
    <label>SAP Configuration</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>