client-app/with-cpq/objects/SBQQ__Quote__c/fields/SAP_SaveSalesDocHeader__c.field-meta.xml
<CustomField>
    <fullName>SAP_SaveSalesDocHeader__c</fullName>
    <label>SAP Save Sales Doc Header</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>